--- a/docs/software-catalog/manage-items/mia-ctl/create/create-item-by-type/create_infrastructure_resource.mdx
+++ b/docs/software-catalog/manage-items/mia-ctl/create/create-item-by-type/create_infrastructure_resource.mdx
@@ -351,7 +351,9 @@ The Frontend of the Console generate the Form using the roles below:
 <Tabs groupId="types" queryString>
   <TabItem value="type-object" label="type Object" default>
 
-The Object field is visualized as Editor
+#### Object field
+
+Visualized as Editor
 
 ![type-object](img/type-object.png)
 
@@ -367,7 +369,7 @@ The Object field is visualized as Editor
     }
     ```
 
-### Validation: 
+##### Validation: 
 
 The editor generated from this type can validate with [ajv library](https://ajv.js.org/) the sub schema used to fields
 
@@ -395,7 +397,9 @@ The editor generated from this type can validate with [ajv library](https://ajv.
   </TabItem>
   <TabItem value="type-array" label="type Array">
 
-The Array field is visualized as Editor
+#### Array field 
+
+Visualized as Editor
 
 ![type-array](img/type-array.png)
 
@@ -422,7 +426,7 @@ The Array field is visualized as Editor
     }
     ```
     
-### Validation: 
+##### Validation: 
 
 The editor generated from this type can validate with [ajv library](https://ajv.js.org/) the sub schema used to fields
 
@@ -455,7 +459,9 @@ The editor generated from this type can validate with [ajv library](https://ajv.
 
   <TabItem value="type-string" label="type String">
 
-The string type is used for textual input. It can include various validations such as minimum and maximum length.
+#### String type 
+
+Used for textual input. It can include various validations such as minimum and maximum length.
 When using a string field, ensure that the input meets the specified length requirements.
 
 ![type-string](img/type-string.png)
@@ -501,7 +507,9 @@ The boolean type is used for true/false values. This is typically represented as
 
   <TabItem value="type-integer" label="type Integer">
 
-The integer type is specifically for whole numbers. It behaves similarly to the number type but restricts input to integers.
+#### Integer type 
+
+Specifically for whole numbers. It behaves similarly to the number type but restricts input to integers.
 
 ![type-int-or-number](img/type-int-or-number.png)
     
@@ -524,7 +532,9 @@ The integer type is specifically for whole numbers. It behaves similarly to the 
   </TabItem>
   <TabItem value="type-number" label="type Number">
 
-The number type is used for numerical input, which can include both integers and floating-point numbers.
+#### Number type
+
+Used for numerical input, which can include both integers and floating-point numbers.
 
 ![type-int-or-number](img/type-int-or-number.png)
 
