--- a/docs/release-notes/v13.6.1.md
+++ b/docs/release-notes/v13.6.1.md
@@ -21,7 +21,7 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 For Marketplace Infrastructure Resources with configured JSON schemas, the creation process within the Design area offers an auto-generated form. This form facilitates the input of all required properties, each accompanied by a user-oriented description.
 
-To discover more about this feature, go to the [respective documentation](/software-catalog/manage-items/mia-ctl/create/create-item-by-type/create_infrastructure_resource#generate-dynamic-form-of-the-to-customize-validation-of-your-infrastructure-resource.md).
+To discover more about this feature, go to the [respective documentation](/software-catalog/manage-items/mia-ctl/create/create-item-by-type/create_infrastructure_resource.mdx#generate-dynamic-form-of-the-to-customize-validation-of-your-infrastructure-resource).
 
 #### Custom label selector support for Projects import 
 
