--- a/docs/release-notes/v13.6.1.md
+++ b/docs/release-notes/v13.6.1.md
@@ -15,6 +15,8 @@ Console SaaS users can try out v13.6.1 latest improvements in Preview! Open a Se
 For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
 :::
 
+## Console
+
 ### Improvements
 
 #### Auto-generated form in Infrastructure Resource Creation
