--- a/docs/release-notes/v13.6.1.md
+++ b/docs/release-notes/v13.6.1.md
@@ -35,7 +35,7 @@ The new version `v7.11.1` of the _Real Time Updater_ is available!
 
 ##### Fixed
 
--`kafka-importer-lib` to `v7.10.2`: Previously, when the operations were not executed in order, some strategies were inadvertently skipped. Now, the behavior has been fixed, allowing that only the strategies that should be skipped are actually excluded from execution.  
+- Previously, when the service was configured to also generate projection changes (standard architecture), we detected an edge case where some strategies were inadvertently skipped. Now, the behavior has been fixed, allowing that only the strategies that should be skipped are actually excluded from execution.
 
 For more information check out the service [changelog](/runtime_suite/real-time-updater/changelog.md).
 
