removed improvement miactl on RN v13.6.1 (#2007)
* removed improvement miactl

* Update v13.6.1.md

---------

Co-authored-by: Alberto Tessarotto <78902914+albertotessarotto@users.noreply.github.com>

--- a/docs/release-notes/v13.6.1.md
+++ b/docs/release-notes/v13.6.1.md
@@ -25,12 +25,6 @@ For Marketplace Infrastructure Resources with configured JSON schemas, the creat
 
 To discover more about this feature, go to the [respective documentation](/software-catalog/manage-items/mia-ctl/create/create-item-by-type/create_infrastructure_resource.mdx#generate-dynamic-form-of-the-to-customize-validation-of-your-infrastructure-resource).
 
-#### Custom label selector support for Projects import 
-
-We added support for custom label selectors when performing a Kubernetes workload import into your Project from existing files.
-
-To discover more about the import feature, head to the [miactl commands documentation](/cli/miactl/30_commands.md).
-
 ## Fast Data
 
 ### Fast Data Services
@@ -41,7 +35,7 @@ The new version `v7.11.1` of the _Real Time Updater_ is available!
 
 ##### Fixed
 
--`kafka-importer-lib` to `v7.10.2`: Previously, when the operations were not executed in order, some strategies were inadvertently skipped. Now, the behavior has been fixed, allowing that only the strategies that should be skipped are actually excluded from execution.  
+- Previously, when the service was configured to also generate projection changes (standard architecture), we detected an edge case where some strategies were inadvertently skipped. Now, the behavior has been fixed, allowing that only the strategies that should be skipped are actually excluded from execution.
 
 For more information check out the service [changelog](/runtime_suite/real-time-updater/changelog.md).
 
