--- a/docs/release-notes/v13.6.1.md
+++ b/docs/release-notes/v13.6.1.md
@@ -5,15 +5,7 @@ sidebar_label: v13.6.1
 image: "img/release-note-link-preview.png"
 ---
 
-_February 20th, 2025_
-
-:::info
-Mia-Platform Console v13.6.1 is **now in Preview** and will be generally available on March 06th.
-
-Console SaaS users can try out v13.6.1 latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
-
-For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
-:::
+_March 06th, 2025_
 
 ## Console
 
@@ -55,4 +47,4 @@ This update introduces several new features aimed at enhancing customization and
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.10.1-beta.0`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.10.1`.
