--- a/docs/release-notes/v13.6.2.md
+++ b/docs/release-notes/v13.6.2.md
@@ -25,6 +25,12 @@ We added support for custom label selectors when performing a Kubernetes workloa
 
 To discover more about the import feature, head to the [miactl commands documentation](/cli/miactl/30_commands.md).
 
+### Bug Fix
+
+This version address the following bug:
+
+* we fixed a graphical bug that was not correctly showing the options to perform "Restore Changes" and "Select for Compare" actions within the revision History modal.
+
 ## Fast Data
 
 ### Fast Data Services
