--- a/docs/release-notes/v13.6.1.md
+++ b/docs/release-notes/v13.6.1.md
@@ -55,4 +55,4 @@ This update introduces several new features aimed at enhancing customization and
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.10.1-beta.0`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.10.1`.
