--- a/docs/release-notes/v13.6.1.md
+++ b/docs/release-notes/v13.6.1.md
@@ -17,6 +17,13 @@ For Marketplace Infrastructure Resources with configured JSON schemas, the creat
 
 To discover more about this feature, go to the [respective documentation](/software-catalog/manage-items/mia-ctl/create/create-item-by-type/create_infrastructure_resource.mdx#generate-dynamic-form-of-the-to-customize-validation-of-your-infrastructure-resource).
 
+### Bug Fix
+
+This version addressed the following bugs:
+
+- Fixed an issue that prevented the "Docker Image Name" field of a resource from being changed if it was connected to a container registry;
+- An issue that caused an inability to delete an environment in the Blueprint from the company has been corrected.
+
 ## Fast Data
 
 ### Fast Data Services
