Mia Care marketplace updates - Fevruary 2025

--- a/docs/release-notes/v13.6.2.md
+++ b/docs/release-notes/v13.6.2.md
@@ -43,7 +43,73 @@ This version address the following bug:
 
 ### Marketplace Updates
 
-#### 
+#### Appointment Manager
+
+The new version `2.5.0` of the Appointment Manager is available!
+
+* Automatically truncate `startDate` and `endDate` of exceptions to the second
+
+#### Care Kit
+
+The new version `2.9.3` of Care Kit is available!
+
+* `ck-patient-dashboard`: Fix word-break
+
+#### Chat Service Frontend
+
+A new version `1.0.1` of Chat Service Frontend is available!
+
+#### Device Manager
+
+The first version `1.0.0` of Device Manager is available!
+
+#### Email Builder
+
+The first version `1.0.0` of Email Builder is available!
+
+#### FHIR Adapter
+
+The new version `1.0.5` of FHIR Adapter is available!
+
+* Upgrade base Docker image and project dependencies
+
+#### FHIR Server
+
+The new version `2.0.0` of FHIR Server is available!
+
+The new version switches to the [HAPI FHIR](https://hapifhir.io/) official [Docker image](https://hub.docker.com/r/hapiproject/hapi).
+
+#### Form Service Backend
+
+The new version `2.1.1` of Form Service Backend is available!
+
+* Form metadata can be edited after form is expired
+
+#### Form Service Frontend
+
+The new version `2.1.1` of Form Service Frontend is available!
+
+* Form metadata can be edited after form is expired
+
+#### Notification Manager
+
+The new version `2.4.3` of Notification Manager is available!
+
+* Fixed reminders scheduled in the past
+
+#### O3 DICOM Service
+
+The new version `0.1.6` of O3 DICOM Service is available!
+
+* Upgrade base Docker image
+
+#### PDF Service
+
+The new version `2.0.1` of PDF Service is available!
+
+* Fixed tests
+* Update dependencies
+* Update Node.js to v18
 
 ## How to update your Console
 
