added api portal updates

--- a/docs/release-notes/v13.6.1.md
+++ b/docs/release-notes/v13.6.1.md
@@ -43,11 +43,11 @@ For more information check out the service [changelog](/runtime_suite/real-time-
 
 ### Marketplace Updates
 
-#### API Portal
+#### API Portal & Swagger Aggregator
 
-A new version `2.2.0` of API Portal is out!
+A new version `2.2.0` of API Portal and `3.9.1` of Swagger Aggregator are out!
 
-This update introduces several new features aimed at enhancing customization and flexibility:
+This updates are related to both services and introduce several new features aimed at enhancing customization and flexibility:
 - **Custom Logo and Favicon**: You can now personalize your API Portal by uploading a custom logo and/or favicon for a more branded experience.
 - **Custom Prefix for /api/openapi/ Endpoints**: A new option allows you to set a custom prefix for your `/api/openapi/` endpoints.
 - **Global Server Selection**: We've added a global server selector, enabling you to choose the desired server for your API endpoints from a centralized location.
