--- a/docs/release-notes/v13.6.2.md
+++ b/docs/release-notes/v13.6.2.md
@@ -43,6 +43,12 @@ This version address the following bug:
 
 ### Marketplace Updates
 
+#### Swagger Aggregator
+
+The new version `3.9.2` of the Swagger Aggregator is available!
+
+* `example` and `examples` keys are removed from `parameters` object inside `paths` by default
+
 #### Appointment Manager
 
 The new version `2.5.0` of the Appointment Manager is available!
