feat(fabric): added fast data release notes

--- a/docs/release-notes/v13.6.2.md
+++ b/docs/release-notes/v13.6.2.md
@@ -35,9 +35,16 @@ This version address the following bug:
 
 ### Fast Data Services
 
-####
+#### Real Time Updater
+
+The new version `v7.11.2` of the _Real Time Updater_ is available!
 
 ##### Fixed
+
+- Previously, when the service was configured to also generate projection changes (standard architecture), a huge amount of concurrent strategies 
+  would cause an infinite loop to the service once the limit was reached. Now, this behavior has been fixed, allowing multiple concurrent strategies to not block the service.
+
+For more information check out the service [changelog](/runtime_suite/real-time-updater/changelog.md).
 
 ## Marketplace
 
