added composability updates

--- a/docs/release-notes/v13.6.2.md
+++ b/docs/release-notes/v13.6.2.md
@@ -25,11 +25,18 @@ We added support for custom label selectors when performing a Kubernetes workloa
 
 To discover more about the import feature, head to the [miactl commands documentation](/cli/miactl/30_commands.md).
 
+#### Meaningful errors for Item Creation/Update in Software Catalog and miactl 
+
+This release enhances error messages in the Software Catalog and miactl, providing clearer and more actionable feedback when creating or updating items, making it easier to diagnose and resolve issues.
+
 ### Bug Fix
 
 This version address the following bug:
 
 * we fixed a graphical bug that was not correctly showing the options to perform "Restore Changes" and "Select for Compare" actions within the revision History modal.
+* added placeholders for empty, read-only fields in the event and state sidebar in the Flow Manager Configurator.
+* added support for retaining shapes in unlinked flows within the Flow Manager Configurator.
+* fixed the retention of "wait-for" logic blocks in unlinked flows that are not connected to any receiving state in the Flow Manager Configurator.
 
 ## Fast Data
 
