--- a/docs/release-notes/v13.6.2.md
+++ b/docs/release-notes/v13.6.2.md
@@ -18,6 +18,12 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ## Console
 
+### Clone Microservice repository via Cursor AI IDE (available only for On-Premise installations)
+
+From now on, you can clone the code repository of your Microservice Templates and Examples also with Cursor AI IDE.  
+The code repository can be copied with both `ssh` and `https`.
+This feature is currently available only for on premise installations, upon enabling via Feature Toggle. 
+
 ### Improvements
 
 #### Custom label selector support for Projects import 
