--- a/docs/release-notes/v13.6.2.md
+++ b/docs/release-notes/v13.6.2.md
@@ -24,6 +24,8 @@ From now on, you can clone the code repository of your Microservice Templates an
 The code repository can be copied with both `ssh` and `https`.
 This feature is currently available only for on premise installations, upon enabling via Feature Toggle. 
 
+For more information about the clone functionality, refer to the [Microservice configuration documentation page](/development_suite/api-console/api-design/services.md#manage-microservices).
+
 ### Improvements
 
 #### Custom label selector support for Projects import 
