--- a/docs/release-notes/v13.6.2.md
+++ b/docs/release-notes/v13.6.2.md
@@ -23,7 +23,8 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 From now on, you can clone the code repository of your Microservice Templates and Examples also with Cursor AI IDE.  
 The code repository can be copied with both `ssh` and `https`.
 
-For more information about the clone functionality with Cursor AI, head to the [Microservice configuration documentation page](/development_suite/api-console/api-design/services.md#manage-microservices) or contact your Mia-Platform referent.
+For more information about the clone functionality with Cursor AI, head to the [Microservice configuration documentation page](/development_suite/api-console/api-design/services.md#manage-microservices).
+
 
 ### Improvements
 
