clone with cursor ai functionality (#2028)
* removed on-prem references

* Update v13.6.2.md

* Update services.md

* Update services.md

* Update docs/release-notes/v13.6.2.md

Co-authored-by: Davide Bianchi <10374360+davidebianchi@users.noreply.github.com>

* Update docs/development_suite/api-console/api-design/services.md

---------

Co-authored-by: Davide Bianchi <10374360+davidebianchi@users.noreply.github.com>

--- a/docs/release-notes/v13.6.2.md
+++ b/docs/release-notes/v13.6.2.md
@@ -18,13 +18,13 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ## Console
 
-### Clone Microservice repository via Cursor AI IDE (available only for On-Premise installations)
+### Clone Microservice repository via Cursor AI IDE
 
 From now on, you can clone the code repository of your Microservice Templates and Examples also with Cursor AI IDE.  
 The code repository can be copied with both `ssh` and `https`.
-This feature is currently available only for on premise installations, upon enabling via Feature Toggle. 
 
-For more information about the clone functionality, refer to the [Microservice configuration documentation page](/development_suite/api-console/api-design/services.md#manage-microservices).
+For more information about the clone functionality with Cursor AI, head to the [Microservice configuration documentation page](/development_suite/api-console/api-design/services.md#manage-microservices).
+
 
 ### Improvements
 
