--- a/docs/release-notes/v13.6.2.md
+++ b/docs/release-notes/v13.6.2.md
@@ -5,16 +5,7 @@ sidebar_label: v13.6.2
 image: "img/release-note-link-preview.png"
 ---
 
-_March 06th, 2025_
-
-:::info
-
-Mia-Platform Console v13.6.2 is **now in Preview** and will be generally available on March 20th.
-
-Console SaaS users can try out v13.6.2 latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
-
-For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
-:::
+_March 20th, 2025_
 
 ## Console
 
@@ -141,4 +132,4 @@ The new version `2.0.1` of PDF Service is available!
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.10.2-beta.0`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.10.2`.
