--- a/docs/release-notes/v13.7.0.md
+++ b/docs/release-notes/v13.7.0.md
@@ -22,9 +22,10 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ### Bug Fix
 
-This version address the following bug:
+This version address the following bugs:
 
-* 
+* we have fixed a bug that prevented the correct visualization of the "Documentation" tab in the Endpoints settings when using API Portal v2;
+* we fixed a bug in which the securityInfo of an endpoint was not added when a single subroute of an endpoint was exposed.
 
 ## Fast Data
 
