--- a/docs/release-notes/v13.7.0.md
+++ b/docs/release-notes/v13.7.0.md
@@ -16,6 +16,10 @@ Console SaaS users can try out v13.7.0 latest improvements in Preview! Open a Se
 For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
 :::
 
+## Audit Logs tracking 
+
+TO DO
+
 ## Console
 
 ### Improvements
