update: added Audit logs part to Release Notes

--- a/docs/release-notes/v13.7.0.md
+++ b/docs/release-notes/v13.7.0.md
@@ -18,7 +18,10 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ## Monitor Audit Logs of your Company
 
-TO DO
+The new Audit Logs section is here, giving a powerful tools to monitor all the actions that take place within your Company with ease!
+All the details can be found in the  [Audit logs documentation](/)
+
+To enable this feature in self-hosted installations check out dedicated section in the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md#upgrade-from-v13.6.2-to-v13.7.0)
 
 ## Console
 
@@ -43,7 +46,7 @@ This version address the following bugs:
 
 ### Marketplace Updates
 
-#### 
+####
 
 ## How to update your Console
 
