add: audit log documentation link and image

--- a/docs/release-notes/v13.7.0.md
+++ b/docs/release-notes/v13.7.0.md
@@ -18,11 +18,13 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ## Monitor Audit Logs of your Company
 
-The new **Audit Logs** feature is now available, providing a powerful tool to effortlessly monitor all activities within your company!  
+The new **Audit Logs** feature is now available, providing a powerful tool to effortlessly monitor all activities within your company!
 
-For more details, check out the [Audit Logs documentation](/).
+![Audit logs table](./img/audit-logs.png)
 
-To enable this feature in self-hosted installations check out dedicated section in the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md#upgrade-from-v13.6.2-to-v13.7.0)
+For more details, check out the [Audit Logs documentation](../development_suite/identity-and-access-management/monitor-audit-logs.md).
+
+To enable this feature in self-hosted installations check out dedicated section in the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md#upgrade-from-v1362-to-v1370)
 
 ## Console
 
