Apply suggestions from code review
added suggestions

--- a/docs/release-notes/v13.7.0.md
+++ b/docs/release-notes/v13.7.0.md
@@ -41,15 +41,32 @@ This version address the following bugs:
 
 ### Fast Data Services
 
-####
+#### Single View Creator
+
+The new versions `v6.8.1` of the _Single View Creator - MongoDB_ and _Single View Creator - Kafka_ are available!
 
 ##### Fixed
+- When performing aggregation, the service now correctly handles ER-schemas that contain a condition with a `NULL` equality
+
+For more information check out the service [changelog](/runtime_suite/single-view-creator/changelog.md).
 
 ## Marketplace
 
 ### Marketplace Updates
 
-####
+#### CRUD Service
+
+The new version `7.2.3` of the CRUD Service is available!
+
+### Changed
+
+* overhauled Mongo view update logic to avoid requesting [`dropCollection`](https://www.mongodb.com/docs/manual/reference/privilege-actions/#mongodb-authaction-dropCollection) privilege action
+* introduce abort controller to NodeJS stream pipeline to ensure the pipeline object is cleaned up when the response stream is destroyed
+
+### Fixed
+
+* prevent a memory leak the service was experiencing when it was not able to fulfill incoming requests
+* corrected a typo in option `maxIdleTimeMS` within Mongo client configuration, which prevented the environment variable `MONGODB_MAX_IDLE_TIME_MS` to take effect
 
 ## How to update your Console
 
