--- a/docs/release-notes/v13.7.0.md
+++ b/docs/release-notes/v13.7.0.md
@@ -18,11 +18,11 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ## Monitor Audit Logs of your Company
 
-The new **Audit Logs** feature is now available, providing a powerful tool to effortlessly monitor all activities within your company!
+The new **Audit Logs** feature is now available, providing a powerful tool to effortlessly monitor all activities within your Company!
 
 ![Audit logs table](./img/audit-logs.png)
 
-For more details, check out the [Audit Logs documentation](../development_suite/identity-and-access-management/monitor-audit-logs.md).
+For more details, check out the [Audit Logs documentation](/development_suite/identity-and-access-management/monitor-audit-logs.md).
 
 To enable this feature in self-hosted installations check out the dedicated section in the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md#upgrade-from-v1362-to-v1370)
 
