--- a/docs/release-notes/v13.7.0.md
+++ b/docs/release-notes/v13.7.0.md
@@ -34,8 +34,9 @@ To enable this feature in self-hosted installations check out the dedicated sect
 
 This version address the following bugs:
 
-* we have fixed a bug that prevented the correct visualization of the "Documentation" tab in the Endpoints settings when using API Portal v2;
-* we fixed a bug in which the securityInfo of an endpoint was not added when a single subroute of an endpoint was exposed.
+* A bug causing the graphical display of the Runtime section for Infrastructure Resources to malfunction has been resolved;
+* We have resolved a bug that prevented the correct display of the 'Documentation' tab in Endpoints settings when using API Portal v2;
+* We resolved a bug where the securityInfo of an endpoint was not added when a single subroute of that endpoint was exposed.
 
 ## Fast Data
 
