--- a/docs/release-notes/v13.7.0.md
+++ b/docs/release-notes/v13.7.0.md
@@ -69,4 +69,5 @@ The new version `7.2.3` of the CRUD Service is available!
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `x.x.x`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `14.0.0-beta.0`.
+
