--- a/docs/data_catalog/frontend/data_catalog_connections.mdx
+++ b/docs/data_catalog/frontend/data_catalog_connections.mdx
@@ -332,7 +332,7 @@ Similarly, the collection retrieval can be tuned with the following options:
 ### Agent Settings
 
 :::info
-Thi settings can be configured for all connections __excepts__ _Mia Platform CRUD_ and _MongoDB_. 
+These settings can be configured for all connections __excepts__ _Mia Platform CRUD_ and _MongoDB_. 
 :::
 
 Once the main details of a connection has been defined, you can also tune runtime parameters
