--- a/docs/data_catalog/frontend/data_catalog_connections.mdx
+++ b/docs/data_catalog/frontend/data_catalog_connections.mdx
@@ -307,7 +307,7 @@ During the retrieval phase, the agent follows these rules to parse the validatio
 
 :::
 
-Other than the connection settings, it's possible to also tune both databases and collections retrieval.
+In addition to the connection settings, it is also possible to tune both databases and collections retrieval.
 
 ##### MongoDB Databases Settings
 
