set up rn 13.7.1

--- a/docs/release-notes/v13.7.0.md
+++ b/docs/release-notes/v13.7.0.md
@@ -5,16 +5,7 @@ sidebar_label: v13.7.0
 image: "img/release-note-link-preview.png"
 ---
 
-_March 20th, 2025_
-
-:::info
-
-Mia-Platform Console v13.7.0 is **now in Preview** and will be generally available on April 03rd.
-
-Console SaaS users can try out v13.7.0 latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
-
-For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
-:::
+_April 03rd, 2025_
 
 ## Monitor Audit Logs of your Company
 
