Add Mia Care marketplace updates

--- a/docs/release-notes/v13.7.1.md
+++ b/docs/release-notes/v13.7.1.md
@@ -23,6 +23,18 @@ This version address the following bugs:
 
 ### Marketplace Updates
 
+#### FHIR Adapter
+
+The new minor version `1.1.0` of the FHIR Adapter is available!
+
+This version adds a `POST /:resource/` endpoint to handle trailing slash.
+
+#### O3 DICOM Service
+
+The new patch version `0.1.7` of the O3 DICOM Service is available!
+
+This releases uses a fixed length of 64 characters for the DICOM UIDs to ensure full compatibility with international standards.
+
 ## How to update your Console
 
 For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `vx.x.x`.
