--- a/docs/release-notes/v13.7.0.md
+++ b/docs/release-notes/v13.7.0.md
@@ -43,6 +43,16 @@ For more information check out the service [changelog](/runtime_suite/single-vie
 
 ## Marketplace
 
+### New Marketplace Components
+
+#### Integration Connector Agent plugin
+
+The **Integration Connector Agent** plugin enables seamless integration between external data sources and sinks. It collects data from sources like **Mia-Platform Console** and **Jira**, processes it, and sends it to sinks such as **MongoDB**.  
+This can be particularly useful for centralized storage, data synchronization, and transformation, improving data accessibility across platforms and streamlining workflows for more effective reporting and decision-making.  
+The Integration Connector Agent is currently available in **BETA** (v0.2.0).
+
+To learn more about all the features and how to configure it, visit the [official documentation](/runtime_suite/integration-connector-agent/10_overview.md).
+
 ### Marketplace Updates
 
 #### CRUD Service
@@ -51,12 +61,10 @@ The new version `7.2.3` of the CRUD Service is available!
 
 ##### Changed
 
-
 * overhauled Mongo view update logic to avoid requesting [`dropCollection`](https://www.mongodb.com/docs/manual/reference/privilege-actions/#mongodb-authaction-dropCollection) privilege action
 * introduce abort controller to NodeJS stream pipeline to ensure the pipeline object is cleaned up when the response stream is destroyed
 
 ##### Fixed
-
 
 * prevent a memory leak the service was experiencing when it was not able to fulfill incoming requests
 * corrected a typo in option `maxIdleTimeMS` within Mongo client configuration, which prevented the environment variable `MONGODB_MAX_IDLE_TIME_MS` to take effect
