--- a/docs/release-notes/mia-platform-v13.mdx
+++ b/docs/release-notes/mia-platform-v13.mdx
@@ -17,6 +17,8 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
+**Test for Dario!!!**
+
 **Welcome to Mia-Platform v13!**
 
 # Compose your Platform
