--- a/docs/release-notes/v13.7.1.md
+++ b/docs/release-notes/v13.7.1.md
@@ -9,6 +9,11 @@ _April 03rd, 2025_
 
 ## Console
 
+### Debug with Mia-Assistant
+
+From this Console version you can Debug your Project with Mia-Assistant! 
+TO DO
+
 ### Bug Fix
 
 This version addresses the following bugs:
