--- a/docs/release-notes/v13.7.1.md
+++ b/docs/release-notes/v13.7.1.md
@@ -18,7 +18,7 @@ TO DO
 
 This version addresses the following bugs:
 
-* 
+* we fixed a bug that prevented to link a newly created Envoy API Gateway to an already existing Listener;
 
 ## Fast Data
 
