--- a/docs/release-notes/mia-platform-v13.mdx
+++ b/docs/release-notes/mia-platform-v13.mdx
@@ -17,7 +17,8 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-**Test for Dario!!!**
+**Test for Dario!!! - Just play around and try doing random stuff**
+_Have fun_
 
 **Welcome to Mia-Platform v13!**
 
