feat(catalog): update compatibility matrix

--- a/docs/data_catalog/data_catalog_fabric_bff.mdx
+++ b/docs/data_catalog/data_catalog_fabric_bff.mdx
@@ -256,3 +256,7 @@ The following steps needs to be followed:
   
   See [Routes paragraph](#routes) to more details. Remember also to update the [users management microfrontend](/data_catalog/secure_access.mdx#users-management) 
   to support the new permission `admin:connections`. 
+
+### From 0.2.0 to 0.3.x
+
+Run [`fabric_admin:0.5.2` cronjob](/data_catalog/database_setup.mdx#cli-configuration) to update persistence layer collections schemas.
