--- a/docs/data_catalog/data_catalog_open_lineage.mdx
+++ b/docs/data_catalog/data_catalog_open_lineage.mdx
@@ -276,11 +276,11 @@ Here are the migration steps to perform between each version of the service.
 The following steps needs to be followed:
 
 - Run [`fabric_admin:0.2.0` cronjob](/data_catalog/database_setup.mdx#cli-configuration) to update persistence layer collections schemas;
-- Add the `/open-lineage/*` endpoints to your project's configuration, along with [their permissions](/data_catalog/secure_access.mdx#open-lineage-api).
+- Add the `/open-lineage/*` endpoints to your project's configuration, along with [their permissions](/data_catalog/secure_access.mdx#open-lineage-alle di un confronto con Fede abbiamo concordato che la gestione attuale non è efficace perchè non riusciamo mai a trovarci con le persone necessarie. Quindi, da adesso procederemo in maniera un po' differente, ditemi se vi torna:
+ pi).
   
   See [Routes paragraph](#open-lineage-routes) to more details. Remember also to update the [users management microfrontend](/data_catalog/secure_access.mdx#users-management) 
-  to support, a valle di un confronto con Fede abbiamo concordato che la gestione attuale non è efficace perchè non riusciamo mai a trovarci con le persone necessarie. Quindi, da adesso procederemo in maniera un po' differente, ditemi se vi torna:
- the new permission `update:lineage`. 
+  to support the new permission `update:lineage`. 
 
 ### From 0.2.x to 0.3.0
 
