--- a/docs/release-notes/v13.7.1.md
+++ b/docs/release-notes/v13.7.1.md
@@ -7,18 +7,30 @@ image: "img/release-note-link-preview.png"
 
 _April 03rd, 2025_
 
-## Console
+## AI Agentic Features for your Company
+
+With this Console release, you can enable AI agentic features that access data within your Company and Projects!
+ 
+By turning on the "AI settings" toggle in the Company Settings page, you activate Mia-Assistant as an agent across all Projects in your Company. This allows users to execute AI commands directly within their Projects.
+
+For more details, check the related [documentation](/console/company-configuration/settings.md).
 
 ### Debug with Mia-Assistant
 
-From this Console version you can Debug your Project with Mia-Assistant! 
-TO DO
+The first AI agentic feature available is Debug with Mia-Assistant.
+Starting from this release, Mia-Assistant helps you gain deeper insights into your Projects’ Runtime!
+
+When inside a specific Project, simply type `/debug` in the Mia-Assistant chat and start asking for information.
+
+Learn more about the Debug command in the related [Mia-Assistant documentation](/console/assistant/overview.md).
+
+## Console
 
 ### Bug Fix
 
 This version addresses the following bugs:
 
-* we fixed a bug that prevented to link a newly created Envoy API Gateway to an already existing Listener;
+* we fixed a bug that prevented to link a newly created Envoy API Gateway to an already existing Listener.
 
 ## Fast Data
 
