--- a/docs/release-notes/v13.7.1.md
+++ b/docs/release-notes/v13.7.1.md
@@ -9,7 +9,7 @@ _April 03rd, 2025_
 
 ## AI Agentic Features for your Company
 
-With this Console release, you can enable AI agentic features that access data within your Company and Projects!
+From this Console release you can enable AI agentic features that access data within your Company and Projects!
  
 By turning on the "AI settings" toggle in the Company Settings page, you activate Mia-Assistant as an agent across all Projects in your Company. This allows users to execute AI commands directly within their Projects.
 
