added image on debug mia assistant

--- a/docs/release-notes/v13.7.1.md
+++ b/docs/release-notes/v13.7.1.md
@@ -24,6 +24,8 @@ When inside a specific Project, simply type `/debug` in the Mia-Assistant chat a
 
 Learn more about the Debug command in the related [Mia-Assistant documentation](/console/assistant/overview.md).
 
+![debug mia assistant](img/debug-mia-assistant.png)
+
 ## Console
 
 ### Bug Fix
