--- a/docs/release-notes/v13.7.1.md
+++ b/docs/release-notes/v13.7.1.md
@@ -28,7 +28,7 @@ Learn more about the Debug command in the related [Mia-Assistant documentation](
 
 ## Customize Service account name for your Microservices
 
-You can now modify the Service account name for your Microservices directly from the new "Service account" card, available in the Microservice detail page, giving you more flexibility and better access control on your workload.
+You can now modify the Service account name for your Microservices directly from the new "Service account" card available in the Microservice detail page, giving you more flexibility and better access control on your workload.
 
 ## Console
 
